[package]
name = "slack-app-folder-echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
docopt = "1.1.1"
env_logger = "0.10.0"
governor = "0.5.1"
log = "0.4.17"
notify = "5.1.0"
reqwest = { version="0.11.14", features = ["multipart", "blocking"] }
rust-ini = "0.18.0"
serde_json = "1.0.94"
thiserror = "1.0.39"
